--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@
 /db/*.sqlite3-journal
 
 # Ignore all logfiles and tempfiles.
-/log/*
-!/log/.keep
+/log/*.log
+#!/log/.keep
 /tmp
 
 # Ignore Spring files.
